# serial-mcp-server

./: .gitignore  .mcp.json  ARCHITECTURE.md  BUILD_CROSS_COMPILE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CROSS_COMPILE_QUICKSTART.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  HOOKS_SETUP_SUMMARY.md  INTEGRATION_PLAN.md  MCP_SERVICE_INTEGRATION.md  Makefile  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE_3_IMPLEMENTATION.md  PROTOCOL.md  QUICKSTART_HOOKS.md  README.md  TESTING.md  TEST_IMPLEMENTATION_SUMMARY.md  TODO.md  WARP.md  build-arm64.ps1  build-arm64.sh  cliff.toml  clippy.toml  config.toml.example  deny.toml  justfile  llms.txt  mcp.json  release.toml  rust-comm.code-workspace  rustfmt.toml
.claude/: settings.local.json
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/: DEPLOYMENT.md
.github/workflows/: README.md  ci.yml
benches/: basic.rs
docs/: WEBSOCKET_IMPLEMENTATION.md
examples/: async_port_usage.rs  check_ports.rs  port_usage.rs
scripts/: ci-local.ps1  ci-local.sh  generate_sccache_config.ps1  init_db.rs  run-hardware-tests.ps1  run-hardware-tests.sh  setup-dev.ps1  setup-dev.sh  verify-hooks.sh
src/: error.rs  lib.rs  main.rs  mcp.rs  rest_api.rs  session.rs  state.rs  stdio.rs  websocket.rs
src/config/: error.rs  loader.rs  mod.rs  schema.rs
src/negotiation/: detector.rs  mod.rs
src/negotiation/strategies/: echo_probe.rs  manufacturer.rs  mod.rs  standard_bauds.rs
src/port/: ASYNC_PORT_README.md  async_port.rs  async_port_quickstart.md  error.rs  mock.rs  mod.rs  sync_port.rs  traits.rs
src/service/: mod.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
src/tui/widgets/: mod.rs
tests/: README.md  initialize_framing.rs  integration_e2e.rs  integration_hardware.rs  session_append_stress.rs  smoke_stdio.rs  test_negotiation.rs  unit_tests.rs
tests/common/: mod.rs
tests/e2e/: discovery_tests.rs  mod.rs  negotiation_tests.rs  websocket_tests.rs  workflow_tests.rs
tests/hardware/: QUICKSTART.md  README.md  auto_negotiation_hardware.rs  enhanced_real_port_tests.rs  mod.rs  port_discovery_tests.rs  real_port_tests.rs  utils.rs
