[package]
name = "serial_mcp_agent"
version = "3.0.0"
edition = "2021"
authors = ["Gemini"]
description = "A robust, production-grade serial port server with a rich MCP interface for LLM agents."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://example.com/your/repo" # update with real URL
keywords = ["serial", "mcp", "automation", "axum", "tokio"]
categories = ["command-line-utilities", "api-bindings", "network-programming"]

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serialport = "4.3.0"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"], default-features = false }
serde_json = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }
assert-json-diff = "2.0"

[[bench]]
name = "basic"
harness = false

