[package]
name = "serial_mcp_agent"
version = "3.1.0"
edition = "2021"
authors = ["Gemini"]
description = "A robust, production-grade serial port server with a rich MCP interface for LLM agents."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://example.com/your/repo" # update with real URL
keywords = ["serial", "mcp", "automation", "axum", "tokio"]
categories = ["command-line-utilities", "api-bindings", "network-programming"]

[dependencies]
axum = { version = "0.8.6", optional = true }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serialport = "4.3.0"
tokio = { version = "1.47.1", features = ["full"] }
rust-mcp-sdk = { version = "0.7.0", default-features = false, optional = true, features = ["server","macros","stdio","streamable-http","hyper-server","2025_06_18"] }
async-trait = { version = "0.1.83", optional = false }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls","sqlite","macros","uuid","chrono"] }
uuid = { version = "1.8.0", features = ["v4","serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19.0"
regex = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memchr = "2.7.6"

[features]
default = ["mcp","rest-api"]

# Official MCP SDK integration
mcp = ["rust-mcp-sdk"]
rest-api = ["axum"]

# Optional: build without stdio (provide only HTTP) later if needed
stdio-only = []

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.7.0", features = ["async_tokio"] }
assert-json-diff = "2.0"

[[bench]]
name = "basic"
harness = false

