[package]
name = "serial_mcp_agent"
version = "3.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Gemini"]
description = "A robust, production-grade serial port server with a rich MCP interface for LLM agents."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/david-t-martel/serial-mcp-server"
keywords = ["serial", "mcp", "automation", "axum", "tokio", "tui"]
categories = ["command-line-utilities", "api-bindings", "network-programming", "hardware-support"]

[[bin]]
name = "serial_mcp_agent"
path = "src/main.rs"

[[bin]]
name = "serial-tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[dependencies]
axum = { version = "0.8.6", features = ["ws"], optional = true }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serialport = "4.3.0"
tokio = { version = "1.47.1", features = ["full"] }
rust-mcp-sdk = { version = "0.7.0", default-features = false, optional = true, features = ["server","macros","stdio","streamable-http","hyper-server","2025_06_18"] }
async-trait = { version = "0.1.83", optional = false }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls","sqlite","macros","uuid","chrono"] }
uuid = { version = "1.8.0", features = ["v4","serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19.0"
regex = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memchr = "2.7.6"

# Configuration
toml = "0.8"
directories = "5.0"

# TUI dependencies (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }
rhai = { version = "1.19", optional = true }

# Hot-reload (optional)
notify = { version = "6.1", optional = true }

# Phase 3: Async serial support
tokio-serial = { version = "5.4", optional = true }
parking_lot = "0.12"
thiserror = "2.0"
futures = { version = "0.3", optional = true }

# Phase 5: OpenAPI documentation
utoipa = { version = "5.2", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "8.0", features = ["axum"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winerror"] }

[features]
# Default features: MCP-only for minimal builds
# For REST API support, use: cargo build --features rest-api
default = ["mcp"]

# Official MCP SDK integration
mcp = ["rust-mcp-sdk"]
# REST API (opt-in) - adds ~8 dependencies
rest-api = ["axum"]

# Async serial support (Phase 3)
async-serial = ["tokio-serial", "futures"]

# Auto-negotiation (Phase 4)
auto-negotiation = ["async-serial"]

# WebSocket streaming (Phase 5)
websocket = ["rest-api", "tokio-stream", "futures"]

# OpenAPI documentation (Phase 5)
openapi = ["utoipa", "utoipa-swagger-ui"]

# Optional: build without stdio (provide only HTTP) later if needed
stdio-only = []

# Legacy stdio interface (deprecated) - only for backwards compatibility
legacy-stdio = []

# Hardware testing - requires real serial devices
hardware-tests = []

# TUI features
tui = ["ratatui", "crossterm", "fuzzy-matcher"]
scripting = ["tui", "rhai"]
hot-reload = ["notify"]

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.7.0", features = ["async_tokio"] }
assert-json-diff = "2.0"

# Phase 1: Testing infrastructure
mockall = "0.13"
proptest = "1.4"
insta = { version = "1.40", features = ["json"] }
tokio-test = "0.4"
pretty_assertions = "1.4"
serial_test = "3.0"
tempfile = "3.10"

# Phase 5: WebSocket testing
tokio-tungstenite = "0.24"

[[bench]]
name = "basic"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true

